# CBS

./: .gitignore  ExcelNormalization.spec  README.md  build_exe.bat  build_installer.bat  launcher.py  pyproject.toml  requirements.txt
docs/: BUILDING.md  CURRENT_STATE_CASE_CATALOGUE.md  CURRENT_STATE_CASE_CATALOGUE_PLAIN_LANGUAGE.md  DEMO_GUIDE.md  EDGE_CASES_TABLE.docx  EDGE_CASES_TABLE.md  IMPLEMENTATION_COMPARISON.docx  IMPLEMENTATION_COMPARISON.md  RECOMMENDATIONS.md  SYSTEM_SPEC.md  UNIFIED_EDGE_CASES.docx  WEB_PATH_EDGE_CASES.docx  WEB_PATH_EDGE_CASES.md
installer/: ExcelNormalization.iss
schemas/: FIELD_NAMING_CONVENTION.md  README.md
scripts/: demo_pipeline.py  run_parity_python.py
scripts/archive/: build_unified_table.py  check_pipeline_output.py  compare_workbooks.py  compare_workbooks_structural.py  convert_comparison_to_word.py  convert_to_word.py  debug_date_groups_b.py  debug_structural_parity.py  run_normalization_b.py  run_processors_b.py
src/excel_normalization/: __init__.py  cli.py  data_types.py  json_exporter.py  orchestrator.py  (+1 more)
tests/: __init__.py  test_cli.py  test_date_engine.py  test_date_processor.py  test_debug_artifacts_missing.py  test_debug_multirow.py  test_debug_nonmerged.py  test_end_to_end_pipeline.py  test_excel_never_modified.py  test_excel_reader.py  test_excel_reader_properties.py  test_excel_to_json_extractor_basic.py  test_excel_writer_error_handling.py  test_export_engine_parity.py  test_export_parity.py  test_extract_row_to_json.py  test_extract_sheet_to_json.py  test_extract_workbook_to_json.py  test_extraction_error_handling.py  test_gender_engine.py  test_gender_processor.py  test_identifier_engine.py  test_identifier_processor.py  test_integration_workflows.py  test_json_to_excel_writer.py  test_merged_cells.py  test_merged_cells_comprehensive.py  test_name_engine.py  test_name_processor.py  test_normalization_pipeline.py  test_orchestrator_pipeline.py  test_parse_date_orchestration.py  test_per_field_date_detection.py  test_plain_date_columns.py  test_preservation_property.py  test_property_based.py  test_schema_validation.py  test_sheet_dataset.py  test_table_detection.py  test_task2_multirow_headers.py  (+1 more)
webapp/: __init__.py  app.py  dependencies.py
(+96 files in other folders)
